kubernetes/apps/c2/sliver/app/sliver-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sliver
  namespace: c2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sliver
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sliver
    spec:
      restartPolicy: Always
      containers:
        - name: sliver
          image: ghcr.io/cowdogmoo/sliverc2:latest@sha256:f5fd77f147ed1d0682e8588c45c7a1b5aef4cb44caceed4976938d77be9c5cd7
          command: ["/bin/bash", "-ec", "while :; do echo '.'; sleep 5 ; done"]
          # Run as root
          securityContext:
            runAsUser: 0
            runAsGroup: 0
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 8443
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 2000m
              memory: 4096Mi
          volumeMounts:
            - name: sliver-pvc
              mountPath: /home/sliver/.sliver
            - name: tls-cert
              mountPath: /home/sliver/.sliver/tls.crt
              subPath: tls.crt
            - name: tls-key
              mountPath: /home/sliver/.sliver/tls.key
              subPath: tls.key
      volumes:
        - name: sliver-pvc
          persistentVolumeClaim:
            claimName: sliver-pvc
        - name: tls-cert
          secret:
            secretName: techvomit-xyz-production-tls
            defaultMode: 0444
        - name: tls-key
          secret:
            secretName: techvomit-xyz-production-tls
            defaultMode: 0444
